// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display a loader when checking: default 1`] = `
<li
  className="display-flex-center"
>
  <Checkbox
    checked={false}
    className="select-list-list-checkbox flex-1"
    loading={false}
    onCheck={[Function]}
    thirdState={false}
  >
    <span
      className="little-spacer-left"
    >
      foo
    </span>
  </Checkbox>
</li>
`;

exports[`should display a loader when checking: loading 1`] = `
<li
  className="display-flex-center"
>
  <Checkbox
    checked={false}
    className="select-list-list-checkbox flex-1"
    loading={true}
    onCheck={[Function]}
    thirdState={false}
  >
    <span
      className="little-spacer-left"
    >
      foo
    </span>
  </Checkbox>
</li>
`;
